[package]
name = "context_analyzer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scylla = "0.12"
futures = "0.3.6"
listenfd = "0.3"
actix-web = "4.0"
actix-cors = "0.7"
actix-rt = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.11"
tokio = { version = "1.0", features = ["full"] }